--- a/src/app/common/components/button/button.component.html
+++ b/src/app/common/components/button/button.component.html
@@ -27,6 +27,7 @@
     *ngIf="saving"
     class="m-button__text--saving"
     [style.width]="buttonTextWidth + 'px'"
+    [style.height]="buttonTextHeight + 'px'"
   >
     <span></span>
     <span></span>
