--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -24,6 +24,7 @@
       justify-content: center;
       width: calc(1em + 16px);
       height: calc(1em + 16px);
+      min-width: 0 !important;
       padding: 0 !important;
 
       ::ng-deep i {
@@ -131,6 +132,17 @@
     }
 
     ///////////////////////////////////////////////////
+    &.m-button--xsmall,
+    &.m-button--small {
+      .m-button__text--saving {
+        span {
+          height: 6px;
+          width: 6px;
+          margin: 0 4px;
+        }
+      }
+    }
+    ///////////////////////////////////////////////////
 
     // Extra Small
 
@@ -163,6 +175,7 @@
 
     &.m-button--medium {
       padding: 12px 25px;
+      min-width: 100px;
 
       & > * {
         font-size: 18px;
@@ -177,6 +190,7 @@
 
     &.m-button--large {
       padding: 14px 30px;
+      min-width: 100px;
 
       & > * {
         font-size: 20px;
@@ -248,6 +262,9 @@
     }
     ///////////////////////////////////////////////////
     .m-button__text--saving {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       span {
         @include m-theme() {
           // Color of the animated circles
@@ -278,6 +295,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 0;
+      min-width: 100px;
 
       > *:not(.m-button__text--saving) {
         height: 100%;
@@ -286,7 +304,7 @@
       ::ng-deep {
         > div span:first-child {
           display: inline-block;
-          margin: 0 10px 0 15px;
+          margin: 0 10px;
         }
       }
 
