Update input mode to prompt for dialpad rather than keyboard

--- a/src/app/modules/auth/multi-factor-auth/panels/recovery-code/recovery-code.component.html
+++ b/src/app/modules/auth/multi-factor-auth/panels/recovery-code/recovery-code.component.html
@@ -1,6 +1,5 @@
 <span class="m-mfaAuth__subheader" i18n="@@MFA_AUTH__ENTER_YOUR_RECOVERY_CODE"
-  >Enter one of your recovery codes in case you lost access to your mobile
-  device.</span
+  >Enter your recovery code if you have lost access to your mobile device.</span
 >
 
 <div class="m-mfaAuth__formContainer">
