--- a/src/app/modules/auth/multi-factor-auth/panels/totp/totp.component.html
+++ b/src/app/modules/auth/multi-factor-auth/panels/totp/totp.component.html
@@ -13,6 +13,7 @@
     (keyup.enter)="onVerifyClick()"
     class="m-mfaAuth__codeInput"
     type="text"
+    inputmode="numeric"
     placeholder="6 digit code"
     max="999999"
   />
