--- a/src/app/modules/settings-v2/security/two-factor-v2/recovery-codes/recovery-codes.component.html
+++ b/src/app/modules/settings-v2/security/two-factor-v2/recovery-codes/recovery-codes.component.html
@@ -1,10 +1,10 @@
 <h4 class="m-twoFactor__recoveryCodeHeader" i18n="@@2FA_RECOVERY_CODE__HEADER">
-  2. Recovery codes
+  2. Recovery code
 </h4>
 <span
   class="m-twoFactor__recoveryCodeSubheader"
   i18n="@@2FA_RECOVERY_CODE__RECOVERY_CODE_SUBHEADER"
-  >Recovery codes are used to access your account in the event you cannot
+  >Your recovery code is used to access your account in the event you cannot
   receive two-factor authentication codes.</span
 >
 <ng-container [ngTemplateOutlet]="recoveryCodeContainer"></ng-container>
