Btn saving ellipsis dots should be round

--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -38,6 +38,10 @@
       }
     }
 
+    &.m-button--saving {
+      padding: 0 !important;
+    }
+
     ::ng-deep {
       a {
         text-decoration: none;
