--- a/src/app/common/components/button/button.component.html
+++ b/src/app/common/components/button/button.component.html
@@ -1,4 +1,5 @@
 <button
+  #buttonContainer
   class="m-button"
   (click)="emitAction($event)"
   [type]="type"
@@ -19,16 +20,13 @@
     'm-button--dropdown': !!dropdown && showDropdownMenu,
     'm-pulsating--small': pulsating
   }"
+  [style.width]="buttonWidth + 'px'"
+  [style.height]="buttonHeight + 'px'"
 >
-  <div *ngIf="!saving" class="m-button__text--unsaved" #buttonTextContainer>
+  <div *ngIf="!saving" class="m-button__text--unsaved">
     <ng-content></ng-content>
   </div>
-  <div
-    *ngIf="saving"
-    class="m-button__text--saving"
-    [style.width]="buttonTextWidth + 'px'"
-    [style.height]="buttonTextHeight + 'px'"
-  >
+  <div *ngIf="saving" class="m-button__text--saving">
     <span></span>
     <span></span>
     <span></span>
