--- a/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
@@ -2,14 +2,16 @@
   <div class="m-composerPopup__content">
     <h3 class="m-composerPopup__title" i18n="@@COMMON__MONETIZE">Monetize</h3>
     <div class="m-tabs__container" *ngIf="!isEditingPlus">
-      <div class="m-tabs__tab" *mIfFeature="'plus-2020'">
-        <a
-          [ngClass]="{ 'm-tabs__tab--selected': type === 'plus' }"
-          (click)="type = 'plus'"
-          data-cy="monetize-membership-plus-tab"
-          >Minds+</a
-        >
-      </div>
+      <ng-container *ngIf="!isGroupPost">
+        <div class="m-tabs__tab" *mIfFeature="'plus-2020'">
+          <a
+            [ngClass]="{ 'm-tabs__tab--selected': type === 'plus' }"
+            (click)="type = 'plus'"
+            data-cy="monetize-membership-plus-tab"
+            >Minds+</a
+          >
+        </div>
+      </ng-container>
       <div
         class="m-tabs__tab"
         *ngIf="(hasSupportTiers$ | async) || !features.has('plus-2020')"
