(chore): remove username from sidebar if matrix flag is on - closes #4674

--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -326,7 +326,7 @@
       </li>
 
       <li
-        *ngIf="user"
+        *ngIf="user && !matrixFeature"
         class="m-sidebarNavigation__item m-sidebarNavigation__item--user"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
       >
