--- a/src/app/modules/wallet/components/tokens/rewards/rewards.component.ng.scss
+++ b/src/app/modules/wallet/components/tokens/rewards/rewards.component.ng.scss
@@ -30,6 +30,16 @@
     margin: 20px 0;
     max-width: 600px;
 
+    &.m-walletTokenEarnings__estimates--hiddenCount {
+      justify-content: start;
+
+      @media screen and (min-width: $max-mobile) {
+        > * + * {
+          margin-left: 100px;
+        }
+      }
+    }
+
     @include mobile-only {
       flex-direction: column;
     }
