--- a/src/app/common/layout/sidebar/navigation.component.ng.scss
+++ b/src/app/common/layout/sidebar/navigation.component.ng.scss
@@ -35,6 +35,10 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
 
+  > nav:first-child {
+    margin-bottom: 200px;
+  }
+
   &::-webkit-scrollbar {
     display: none;
   }
