(fix) add owner check for follows you badge

--- a/src/app/modules/channels/v2/header/header.component.html
+++ b/src/app/modules/channels/v2/header/header.component.html
@@ -32,7 +32,7 @@
 
     <span class="m-channelHeaderInfo__username">
       @{{ channel.username }}
-      <span *ngIf="channel.subscriber">
+      <span *ngIf="shouldShowSubscribesToYou(channel)">
         Subscribes to you
       </span>
     </span>
