(feat): add new badges to publisher card

--- a/src/app/common/components/publisher-card/publisher-card.component.html
+++ b/src/app/common/components/publisher-card/publisher-card.component.html
@@ -31,7 +31,7 @@
           *ngIf="type === 'user'"
           class="m-publisher--badges-activity"
           [user]="publisher"
-          badges="[ 'admin', 'verified' ]"
+          badges="[ 'admin', 'verified', 'plus', 'pro' ]"
         ></m-channel--badges>
       </div>
       <div>
