--- a/src/app/modules/discovery/card-carousel/card-carousel.component.ng.scss
+++ b/src/app/modules/discovery/card-carousel/card-carousel.component.ng.scss
@@ -1,4 +1,5 @@
 @import 'defaults.scss';
+@import '../../../common/layout/layout.scss';
 
 :host {
   display: block;
@@ -6,9 +7,15 @@
 
   .m-discoveryCardCarousel__wrapper {
     padding: 30px 0 20px;
+    @include m-theme() {
+      border-bottom: 1px solid themed($m-borderColor--primary);
+    }
 
     &.m-discoveryCardCarousel--suggestions {
       padding-top: 20px;
+      @include m-theme() {
+        border-bottom: none;
+      }
 
       ::ng-deep {
         .m-discoveryCardCarousel__cards {
@@ -48,7 +55,7 @@
 
           &:first-child {
             padding-left: 40px;
-            @media screen and (max-width: $max-mobile) {
+            @media screen and (max-width: $layoutMin3ColWidth) {
               padding-left: 20px;
             }
           }
