Only extend height of sidebar when matrix flag on

--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -1,6 +1,7 @@
 <div
   class="m-sidebarNavigation"
   [class.m-sidebarNavigation--slide]="layoutMode === 'phone'"
+  [ngClass]="{ 'm-sidebarNavigation--matrixFeature': matrixFeature }"
   (click)="onSidebarNavClick()"
 >
   <nav>
