--- a/src/app/common/components/publisher-card/publisher-card.component.ng.scss
+++ b/src/app/common/components/publisher-card/publisher-card.component.ng.scss
@@ -94,9 +94,15 @@
         }
       }
 
-      img {
+      .m-publisherCardAvatarImg {
         width: 38px;
         height: 38px;
+        max-width: 38px;
+        max-height: 38px;
+        background-position: center;
+        background-size: cover;
+        border-radius: 50%;
+        flex-basis: 100%;
       }
     }
 
