Disable on-site pro theme #4379

--- a/src/app/modules/settings-v2/pro/general/general.component.html
+++ b/src/app/modules/settings-v2/pro/general/general.component.html
@@ -87,7 +87,8 @@
       </div>
     </div>
 
-    <div class="m-form__field--checkbox">
+    <!-- Disabled for https://gitlab.com/minds/front/-/issues/4379 -->
+    <!-- <div class="m-form__field--checkbox">
       <div class="m-form__row--input">
         <label
           for="publish"
@@ -116,7 +117,7 @@
           <span class="m-form__customInput__checkbox"></span>
         </label>
       </div>
-    </div>
+    </div> -->
   </div>
   <div class="m-form__buttonsContainer">
     <m-button
