--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
@@ -5,7 +5,9 @@
   <i class="material-icons">repeat</i>
   <span>Reminded by </span>
   <ng-container *ngFor="let reminder of entity.remind_users; let i = index">
-    <a [routerLink]="['/', reminder.username]">{{ reminder.name }}</a>
+    <a [routerLink]="['/', reminder.username]">
+      {{ reminder.name | excerpt: 50 }}
+    </a>
   </ng-container>
 </div>
 
