Fix issue with infinite loading circle when accessing comment images #4568

--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -80,6 +80,7 @@
     [baseEntity]="activity"
   ></m-newsfeed__activitySuggestions>
   <!-- - RELATED TAGS --------------------------- -->
+  <!-- <pre>{{ activity | json }}</pre> -->
   <m-discovery__sidebarTags
     *ngIf="activity"
     context="activity"
