(feat): canary update message for new chat

--- a/src/app/modules/newsfeed/newsfeed.component.html
+++ b/src/app/modules/newsfeed/newsfeed.component.html
@@ -29,6 +29,8 @@
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
         <m-onboardingProgressWidget></m-onboardingProgressWidget>
+
+        <m-chat__sidebarPrompt></m-chat__sidebarPrompt>
         <m-language__sidebarPrompt></m-language__sidebarPrompt>
         <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
 
