--- a/src/app/modules/layout/topbar-wrapper/topbar.component.html
+++ b/src/app/modules/layout/topbar-wrapper/topbar.component.html
@@ -4,7 +4,7 @@
   </ng-container>
 
   <ng-container icons *ngIf="session.isLoggedIn()">
-    <m-composer__topbarButton></m-composer__topbarButton>
+    <m-topbar-walletBalance></m-topbar-walletBalance>
     <m-notifications--topbar-toggle></m-notifications--topbar-toggle>
   </ng-container>
 </m-v3topbar>
