--- a/src/app/modules/blogs/v2/edit/editor-base.component.html
+++ b/src/app/modules/blogs/v2/edit/editor-base.component.html
@@ -21,6 +21,11 @@
     <div
       *ngIf="service.banner$ | async"
       class="m-blogEditor__bannerImageContainer"
+      [ngClass]="{
+        'wide-banner':
+          (service.timeCreated$ | async) >= wideBannerDate ||
+          (service.timeCreated$ | async) == 0
+      }"
     >
       <div class="m-blogEditor__bannerToolbar">
         <m-button
@@ -56,6 +61,9 @@
               <i class="material-icons">publish</i>
               Upload Banner
             </m-button>
+
+            <span>930px x 300px</span>
+
             <input
               hidden
               id="channel-v2-edit-avatar"
