Pwned password validation in password popover

--- a/src/app/modules/forms/popover-validation/popover.component.ng.scss
+++ b/src/app/modules/forms/popover-validation/popover.component.ng.scss
@@ -1,13 +1,27 @@
-m-popover {
+@import 'defaults.scss';
+
+:host {
   .m-popover__wrapper {
     position: relative;
     //margin-top: 1.5rem;
     display: block;
 
+    .m-popover__close {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      font-size: 24px;
+      cursor: pointer;
+      @include m-theme() {
+        color: themed($m-textColor--tertiary);
+      }
+    }
     .m-popover__content {
       margin-top: 2.2rem;
+
       opacity: 0;
       visibility: hidden;
+
       position: absolute;
       //left: -150px;
       transform: translate(0, 10px);
@@ -77,8 +91,43 @@ m-popover {
             @include m-theme() {
               color: themed($m-green);
             }
-            // check
-            content: '\e5ca';
+            content: 'check';
+          }
+
+          &.m-popover__rule--invalid::before {
+            font-family: 'Material Icons';
+            @include m-theme() {
+              color: themed($m-red-dark);
+            }
+            content: 'close';
+          }
+
+          &.m-popover__rule--risk {
+            position: relative;
+
+            ::ng-deep m-loadingSpinner {
+              position: relative;
+              .m-loadingSpinner__wrapper {
+                position: absolute;
+                left: -26px;
+                top: 2px;
+                display: inline-block;
+                padding: 0;
+                .m-loadingSpinner__container {
+                  height: 15px;
+                  width: 15px;
+                }
+              }
+            }
+
+            ::ng-deep {
+              m-tooltip {
+                margin-left: 2px !important;
+                .m-tooltip > i {
+                  font-size: 13px;
+                }
+              }
+            }
           }
         }
       }
