Change warning to be only one active withdrawal at a time

--- a/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
+++ b/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
@@ -129,7 +129,7 @@
                 *ngIf="!canTransfer"
                 i18n="@@WALLETV2_ONCHAIN_TRANSFER__ONLY_ONCE_PER_DAY"
               >
-                You may only transfer once per day
+                You may only have one pending withdrawal at a time
               </p>
               <p *ngIf="submitError">{{ submitError }}</p>
             </div>
