Update topbar wallet balance

--- a/src/app/common/layout/topbar/topbar-wallet-balance/topbar-wallet-balance.html
+++ b/src/app/common/layout/topbar/topbar-wallet-balance/topbar-wallet-balance.html
@@ -1,7 +1,7 @@
 <div
   class="m-topbar-wallet-balance"
   (click)="navigateWallet()"
-  *ngIf="tokenBalance >= 0 && usdBalance >= 0"
+  *ngIf="isConnected && tokenBalance >= 0 && usdBalance >= 0"
 >
   <div class="m-topbar-wallet-balance__tokens">
     <m-icon from="custom" iconId="wallet" m-tooltip--icon></m-icon>
@@ -9,5 +9,16 @@
   </div>
   <div class="m-topbar-wallet-balance__usd">
     ${{ formatUSD(usdBalance) }}
+  </div>
+</div>
+
+<div
+  class="m-topbar-wallet-balance"
+  (click)="connectWallet($event)"
+  *ngIf="!isConnected"
+>
+  <div class="m-topbar-wallet-balance__connect">
+    <m-icon iconId="add_circle" m-tooltip--icon></m-icon>
+    <span i18n="@@MARKETING__CONNECT_WALLET">Connect Wallet</span>
   </div>
 </div>
