--- a/src/app/common/layout/topbar/topbar-wallet-balance/topbar-wallet-balance.component.ng.scss
+++ b/src/app/common/layout/topbar/topbar-wallet-balance/topbar-wallet-balance.component.ng.scss
@@ -55,5 +55,19 @@
         display: none;
       }
     }
+
+    &__connect {
+      padding: 0 5px 0 3px;
+      display: flex;
+      align-items: center;
+
+      span {
+        padding-left: 4px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 130px;
+      }
+    }
   }
 }
