(feat): update sidebar text for production users - closes #4710

--- a/src/app/modules/messenger-v2/chat-sidebar-prompt/chat-sidebar-prompt.component.html
+++ b/src/app/modules/messenger-v2/chat-sidebar-prompt/chat-sidebar-prompt.component.html
@@ -1,11 +1,16 @@
 <ng-container *mIfFeature="'matrix'">
-  <m-sidebarWidget title="Canary Update" dismissibleId="matrix">
+  <m-sidebarWidget title="Minds Chat is Live" dismissibleId="matrix">
     <div class="m-sidebarWidget__body">
       <p class="m-chatSidebarPrompt__text" i18n="@@CHAT_SIDEBAR__PROMPT">
-        Our new encrypted chat is now live in Canary! Click <b>Chat</b> in the
-        main navigation to test it and give us feedback. The old messenger can
-        be turned back on in
-        <a routerLink="/settings/account/messenger">settings</a>.
+        Featuring end-to-end encryption, rooms, file-sharing, video chat and
+        more. Click <a href="https://chat.minds.com/" target="chat">here</a> to
+        try it out. The old messenger can be turned back on in
+        <a routerLink="/settings/account/messenger">settings</a>. Read our
+        <a
+          routerLink="/minds/blog/launching-minds-chat-feat-end-to-end-encryption-rooms-file-s-1236686205647396864"
+          >blog</a
+        >
+        for more details.
       </p>
     </div>
   </m-sidebarWidget>
