--- a/src/app/modules/messenger-v2/chat-sidebar-prompt/chat-sidebar-prompt.component.ng.scss
+++ b/src/app/modules/messenger-v2/chat-sidebar-prompt/chat-sidebar-prompt.component.ng.scss
@@ -1,6 +1,13 @@
+@import 'defaults.scss';
+
 :host {
   m-sidebarWidget {
     margin-bottom: 20px;
     display: block;
+  }
+  a {
+    @include m-theme() {
+      color: themed($m-blue);
+    }
   }
 }
