--- a/src/app/modules/mobile/marketing/marketing.component.ng.scss
+++ b/src/app/modules/mobile/marketing/marketing.component.ng.scss
@@ -70,4 +70,170 @@
     font-size: 12px;
     line-height: 13px;
   }
+
+  // revised styling
+
+  .m-marketing {
+    padding: 0 45px;
+
+    @include mobile-only {
+      padding: 0 23px;
+    }
+
+    @include tablet-only {
+      padding: 0 23px;
+    }
+
+    &__header {
+      h1 {
+        font-weight: bold;
+        font-size: 32px;
+
+        @include mobile-only {
+          margin-bottom: 10px;
+        }
+
+        @include m-theme() {
+          color: themed($m-textColor--primary);
+        }
+      }
+
+      p {
+        line-height: 1.4em;
+
+        @include m-theme() {
+          color: themed($m-textColor--secondary);
+        }
+      }
+    }
+
+    &__group {
+      h2 {
+        font-weight: 600;
+        font-size: 24px;
+        margin-bottom: 0;
+
+        @include m-theme() {
+          color: themed($m-textColor--primary);
+        }
+      }
+
+      p {
+        @include m-theme() {
+          color: themed($m-textColor--secondary);
+        }
+      }
+    }
+
+    &__grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    &__gridItem {
+      @include mobile-only {
+        width: calc(100% - 10px);
+        margin-bottom: 25px;
+      }
+
+      width: calc(50% - 10px);
+      @include m-theme() {
+        background: themed($m-bgColor--primary);
+      }
+      border-radius: 5px;
+      @include m-theme() {
+        border: 1px solid themed($m-borderColor--primary);
+      }
+      margin-bottom: 20px;
+
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &Title {
+        text-align: left;
+        width: calc(100% - 40px);
+        padding: 20px 20px 10px 20px;
+        @include m-theme() {
+          color: themed($m-textColor--primary);
+        }
+      }
+
+      &Image {
+        padding: 25px 10px;
+        text-align: center;
+
+        @include mobile-only {
+          img {
+            width: 80%;
+            height: inherit;
+          }
+        }
+
+        @include tablet-only {
+          img {
+            width: 80%;
+            height: inherit;
+          }
+        }
+      }
+
+      &Actions {
+        width: 100%;
+        padding: 13px 0;
+        text-align: center;
+        @include m-theme() {
+          border-top: 1px solid themed($m-borderColor--primary);
+        }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        @include mobile-only {
+          flex-direction: column;
+        }
+
+        @include tablet-only {
+          flex-direction: column;
+        }
+
+        a {
+          @include m-theme() {
+            color: themed($m-textColor--secondary);
+          }
+          text-decoration: none;
+          padding: 0 7px;
+          align-self: center;
+
+          @include mobile-only {
+            padding: 7px 0;
+          }
+
+          @include tablet-only {
+            padding: 7px 0;
+          }
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+
+        i {
+          @include m-theme() {
+            color: themed($m-textColor--secondary);
+          }
+          font-size: 22px;
+          padding-right: 1px;
+          height: 100%;
+          vertical-align: middle;
+          padding-top: 1px;
+        }
+      }
+    }
+  }
 }
