Update mobile page copy

--- a/src/app/modules/mobile/marketing/marketing.component.html
+++ b/src/app/modules/mobile/marketing/marketing.component.html
@@ -8,8 +8,9 @@
     <p i18n="@@MOBILE__MARKETING__ANDROID__INTRO">
       For the best experience, download the mobile app directly from Minds. All
       content is accessible. Make sure you are running Android 5 (Lollipop) or
-      higher and Update phone settings to "Allow installation of apps from
-      unknown sources"
+      higher and update phone settings to "allow installation of apps from
+      unknown sources." NSFW content is not currently accessible on Google Play
+      due to their terms of service.
     </p>
 
     <div class="m-marketing__grid">
@@ -110,9 +111,9 @@
   <div class="m-marketing__group">
     <h2 i18n="@@MOBILE__MARKETING__APPLE__TITLE">Apple</h2>
     <p i18n="@@MOBILE__MARKETING__APPLE__INTRO">
-      iPhone users may download the mobile app directly from the iOS App Store.
-      All features of the Minds Token (wallet, boost, wire, etc) are not
-      currently supported in this version. All content is accessible.
+      iPhone users may only download the mobile app directly from the iOS App
+      Store. NSFW content is not currently accessible on iOS App Store due to
+      their terms of service.
     </p>
 
     <div class="m-marketing__grid">
