--- a/src/app/modules/mobile/marketing/marketing.component.html
+++ b/src/app/modules/mobile/marketing/marketing.component.html
@@ -37,7 +37,7 @@
               src="{{ cdnAssetsUrl }}assets/marketing/mobile/google-play.svg"
               height="40"
           /></a>
-          <i (click)="loadReleases()" class="material-icons">
+          <i (click)="toggleReleases()" class="material-icons">
             history
           </i>
         </div>
@@ -73,7 +73,7 @@
     </div>
   </div>
 
-  <div class="m-marketing__group" *ngIf="releases.length > 0">
+  <div class="m-marketing__group" *ngIf="releases.length > 0 && showReleases">
     <h2>
       Release History
     </h2>
